// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink it renders an active state 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 2px solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border-color: #5E26FF;
  background-color: transparent;
  color: #5E26FF;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 48px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  width: 160px;
}

.c0:hover {
  opacity: 0.8;
}

<a
  class="c0"
  font-size="3"
  height="6"
  href="https://openworklabs.com"
  rel="noopener"
  target="_blank"
  width="9"
>
  Assets
</a>
`;

exports[`NavLink it renders an inactive state 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  border-color: #262626;
  background-color: transparent;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 48px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  width: 160px;
}

.c0:hover {
  opacity: 0.8;
}

<a
  class="c0"
  font-size="3"
  height="6"
  href="https://openworklabs.com"
  rel="noopener"
  target="_blank"
  width="9"
>
  Assets
</a>
`;

exports[`StyledATag renders the StyledATag 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #ffffff;
  font-size: 1.25rem;
}

.c0:hover {
  border-bottom: 2px solid #5E26FF;
}

<a
  class="c0"
  color="core.white"
  font-size="3"
  href="https://openworklabs.com"
  rel="noopener"
  target="_blank"
/>
`;

exports[`StyledATag storybook example renders 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #000;
  font-size: 1.25rem;
}

.c0:hover {
  border-bottom: 2px solid #5E26FF;
}

<a
  class="c0"
  color="core.black"
  font-size="3"
  href="https://openworklabs.com"
  rel="noopener"
  target="_blank"
>
  Link text
</a>
`;
